# homework_02_explorer

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  log.txt
include/: explorer.hpp
sources/: explorer.cpp
